--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,17 @@ html {
     scroll-snap-align: start;
 }
 
+.section h2 {
+    opacity: 0;
+    transform: translateX(150px);
+    transition: all 5s ease;
+}
+
+.section.active h2 {
+    opacity: 1;
+    transform: translateX(0);
+}
+
 section:nth-child(odd) {
     justify-content: flex-end;
 }
