--- a/src/style.css
+++ b/src/style.css
@@ -41,13 +41,13 @@ html {
     scroll-snap-align: start;
 }
 
-.section h2 {
+.section h1, .section h2 {
     opacity: 0;
     transform: translateX(150px);
     transition: all 2s ease;
 }
 
-.section.active h2 {
+.section.active h1,.section.active h2 {
     opacity: 1;
     transform: translateX(0);
 }
